turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:18: error: not found: value color
  setCouleurBrosse(color(i))
                   ^